# rvcpu

./: .gitignore  CMakeLists.txt  Untitled Diagram.drawio  instructions.mem  ldst.mem  pipeline.drawio  top.vcd
src/: adder.sv  alu.sv  bru.sv  bus_width_adapter.sv  cache.sv  clock_divider.sv  comparator.sv  control.sv  counter.sv  debouncer.sv  decoder.sv  decoder.tbl  dependency_unit.sv  edge_detect.sv  flop.sv  gen_imm.sv  instruction_memory.sv  lfsr.sv  mpcache.sv  mux.sv  mux2.sv  mux3.sv  prisel.sv  pulse_generator.sv  qspi_flash.sv  ram.sv  regfile.sv  reset_sync.sv  riscv_core.sv  rvcpu.sv  rvcpu.svh  sdpram.sv  sdpram_generic.sv  shift_in_register.sv  shift_out_register.sv  sign_extend.sv  skidbuffer.sv  spram.sv  spram_generic.sv  stage_ex.sv  (+6 more)
synth/: clk_converter.sv  pattern.mem  top.sv
tb/: bus_width_adapter_tb.sv  cache_sim.cpp  cache_tb.sv  clock_divider_tb.sv  counter_tb.sv  debounce_tb.sv  gen_imm_tb.sv  mpcache_tb.sv  prisel_tb.sv  pulse_generator_tb.sv  qspi_flash_tb.sv  ram_tb.sv  regfile_tb.sv  sext_tb.sv  sim_clock.sv  sim_main.cpp  sync_fifo_tb.sv  top.sv  uart_tb.sv
templates/: arty_top.sv
test/: deps.S  ldst.S  prog.S  sck_test.sv
